# swpp202601

./: README.md
assignments/assignment4/: CMakeLists.txt  README.md  build-and-test.sh  unreachable.sh
assignments/assignment4/src/: CMakeLists.txt  polygon.cpp  unreachable.cpp
practice-materials/: README.md
practice-materials/scripts/linux/: install-alive2.sh  install-llvm.sh
practice-materials/scripts/linux/arch/: install-alive2.sh  install-llvm.sh
practice-materials/scripts/macos/: install-alive2.sh  install-llvm.sh
project/: SWPP202601-alive2-260417.patch  applying-patch.md
